--- a/packages/repo-doctor/src/assets/css/element-var.scss
+++ b/packages/repo-doctor/src/assets/css/element-var.scss
@@ -27,7 +27,7 @@ $--color-primary-light-7: mix($--color-white, $--color-primary, 70%) !default; /
 $--color-primary-light-8: mix($--color-white, $--color-primary, 80%) !default; /* d9ecff */
 $--color-primary-light-9: mix($--color-white, $--color-primary, 90%) !default; /* ecf5ff */
 
-$--color-success: #67c23a !default;
+$--color-success: #00c6ae !default;
 $--color-warning: #e6a23c !default;
 $--color-danger: #f56c6c !default;
 $--color-info: #909399 !default;
@@ -161,7 +161,7 @@ $--checkbox-button-checked-border-color: $--color-primary !default;
 
 /* Radio
 -------------------------- */
-$--radio-font-size: 12px !default;
+$--radio-font-size: 14px !default;
 $--radio-font-weight: $--font-weight-primary !default;
 $--radio-color: $--color-text-regular !default;
 $--radio-input-height: 12px !default;
@@ -345,7 +345,7 @@ $--input-medium-height: 36px !default;
 $--input-small-font-size: 13px !default;
 $--input-small-height: 32px !default;
 
-$--input-mini-font-size: 12px !default;
+$--input-mini-font-size: 14px !default;
 $--input-mini-height: 28px !default;
 
 /* Cascader
@@ -409,7 +409,7 @@ $--button-small-border-radius: #{$--border-radius-base - 1} !default;
 $--button-small-padding-vertical: 9px !default;
 $--button-small-padding-horizontal: 15px !default;
 
-$--button-mini-font-size: 12px !default;
+$--button-mini-font-size: 14px !default;
 $--button-mini-border-radius: #{$--border-radius-base - 1} !default;
 $--button-mini-padding-vertical: 7px !default;
 $--button-mini-padding-horizontal: 20px !default;
