--- a/packages/repo-doctor/src/assets/css/font.css
+++ b/packages/repo-doctor/src/assets/css/font.css
@@ -1,15 +1,15 @@
 /* 第三方外部 ICON 框架 */
 
-/* @import '../../../node_modules/font-awesome/css/font-awesome.css'; */
+@import './../fonts/iconfont.css';
 
-/* [class^='fa'],
-[class*=' fa'] {
+[class^='icon_'],
+[class*=' icon'] {
   display: inline-block;
-  font-family: FontAwesome !important;
+  font-family: iconfont !important;
   font-weight: 400;
   font-style: normal;
   font-variant: normal;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-} */
+}
