Fix layout -> tabnav 样式修正

--- a/packages/repo-doctor/src/assets/css/element-fix.scss
+++ b/packages/repo-doctor/src/assets/css/element-fix.scss
@@ -1,5 +1,12 @@
 @import './element-var.scss';
 
+// Fix el-nav
+.el-menu-item {
+  &:focus {
+    background-color: transparent;
+  }
+}
+
 // Fix el-input
 .el-textarea__inner,
 .el-input__inner {
