--- a/packages/repo-doctor/src/assets/css/element-fix.scss
+++ b/packages/repo-doctor/src/assets/css/element-fix.scss
@@ -1,5 +1,33 @@
 @import './element-var.scss';
 
+// Fix el-pager
+.el-pager li {
+  background: rgba(240, 242, 245, 1);
+  color: #606266;
+  min-width: 28px;
+  margin: 0 10px 0 0;
+
+  &:last-child {
+    margin: 0;
+  }
+
+  &.active {
+    background: rgba(0, 198, 174, 1);
+    color: #ffffff;
+  }
+}
+
+// Fix el-table
+.el-table--mini {
+  font-size: 14px;
+  color: #606266;
+
+  thead {
+    font-weight: 600;
+    color: rgba(51, 51, 51, 1);
+  }
+}
+
 // Fix el-nav
 .el-menu-item {
   &:focus {
