--- a/packages/repo-doctor/src/assets/css/element-fix.scss
+++ b/packages/repo-doctor/src/assets/css/element-fix.scss
@@ -38,7 +38,7 @@
 // Fix el-input
 .el-textarea__inner,
 .el-input__inner {
-  padding: 5px;
+  // padding: 5px;
 }
 
 .el-input--suffix .el-input__inner {
