--- a/packages/repo-doctor/src/assets/css/element-fix.scss
+++ b/packages/repo-doctor/src/assets/css/element-fix.scss
@@ -65,6 +65,7 @@
 .el-dialog {
   margin: 10vh auto;
   max-height: 80vh;
+  width: 620px;
 
   .el-dialog__header {
     display: flex;
@@ -89,8 +90,11 @@
       top: 6px;
     }
   }
+
   .el-dialog__body {
     background: #fff;
     padding: 10px;
+    max-height: calc(80vh - 30px);
+    overflow: auto;
   }
 }
