--- a/packages/repo-doctor/src/assets/css/element-fix.scss
+++ b/packages/repo-doctor/src/assets/css/element-fix.scss
@@ -51,9 +51,9 @@
 
 // Fix el-button
 .el-button {
-  &:not(.is-circle) {
-    min-width: 80px;
-  }
+  // &:not(.is-circle) {
+  //   min-width: 80px;
+  // }
 }
 
 // Fix pagination
@@ -68,11 +68,10 @@
   width: 600px;
 
   .el-dialog__header {
-    display: flex;
-    align-items: center;
     height: 30px;
-
+    line-height: 30px;
     padding: 0 10px;
+    vertical-align: middle;
 
     background: transparent;
 
