新增 我的家人 模块 (未完)

--- a/packages/repo-patient/src/assets/css/variable.scss
+++ b/packages/repo-patient/src/assets/css/variable.scss
@@ -1,1 +1,10 @@
 $-color--primary: #00c6ae;
+
+// color
+$primary: #00c6ae;
+$blue: #3890ff;
+$green: #22c36a;
+$yellow: #f7b32b;
+$orange: #f5a623;
+$red: #f1483f;
+$purple: #7354e2;
