--- a/packages/repo-patient/src/views/style/icon.css
+++ b/packages/repo-patient/src/views/style/icon.css
@@ -1,8 +1,8 @@
 /*icon */
 .icon {
     display: inline-block;
-    width: (30px/2);
-    height: (30px/2);
+    width: 15px;
+    height: 15px;
     vertical-align: middle;
 }
 
@@ -10,8 +10,8 @@
     content: '';
     position: absolute;
     display: block;
-    width: (30px/2);
-    height: (30px/2);
+    width: 15px;
+    height: 15px;
     background-size: cover;
 }
 
