--- a/packages/repo-patient/src/views/style/style.css
+++ b/packages/repo-patient/src/views/style/style.css
@@ -1,5 +1,5 @@
-@import "./components.css";
-@import "./elements.css";
-@import "./grid.css";
-@import "./icon.css";
-@import "./modules.css";
+@import './components.css';
+@import './elements.css';
+@import './grid.css';
+@import './icon.css';
+@import './modules.css';
