--- a/packages/repo-patient/src/assets/css/iconfont.css
+++ b/packages/repo-patient/src/assets/css/iconfont.css
@@ -2,8 +2,8 @@
 
 @import './../font/iconfont.css';
 
-[class^='icon_'],
-[class*=' icon'] {
+[class^='ic-'],
+[class*=' ic'] {
   display: inline-block;
   font-family: iconfont !important;
   font-weight: 400;
