--- a/packages/repo-patient/src/views/style/modules.css
+++ b/packages/repo-patient/src/views/style/modules.css
@@ -61,12 +61,13 @@
 }
 
 .card .card-label {
-  color: #444;
-  border: 1px solid #aaa;
-  border-radius: 10px;
+  color: #00c6ae;
+  /* border: 1px solid #aaa; */
+  border-radius: 2.5px;
   padding: 2.5px 7px;
   font-size: 11px;
-  margin-right: 5px;
+  margin-right:5px;
+  background: #E5F9F6;
 }
 
 .cards {
