--- a/packages/repo-patient/src/views/style/modules.css
+++ b/packages/repo-patient/src/views/style/modules.css
@@ -192,7 +192,7 @@ panel
   position: relative;
   box-sizing: border-box;
   background-color: #fff;
-  margin: 10px 0;
+  border-bottom: 10px solid #f5f5f5;
   padding: 10px 15px;
   border-radius: 0;
   /*box-shadow: 0 5px 5px #efefef;*/
