Fixed 【ID1000530】 咨询详情，弹窗固定位置与高度，滑动查看咨询详情，弹窗不随页面滚动

--- a/packages/repo-doctor/src/assets/css/element-fix.scss
+++ b/packages/repo-doctor/src/assets/css/element-fix.scss
@@ -5,6 +5,9 @@
 }
 
 .el-dialog {
+  max-height: 75vh;
+  overflow: hidden;
+
   .el-dialog__header {
     display: flex;
     align-items: center;
@@ -25,6 +28,8 @@
     padding: 15px 10px;
     background: #fff;
     padding: 10px;
+    max-height: calc(75vh - 40px);
+    overflow: auto;
   }
 }
 
