--- a/packages/repo-patient/src/views/style/components.css
+++ b/packages/repo-patient/src/views/style/components.css
@@ -45,6 +45,7 @@ list
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
+  align-items: center;
 
   position: relative;
   line-height: 19px;
@@ -184,7 +185,7 @@ list-three [三列]
   justify-content: center;
   align-items: stretch;
   background: #fff;
-  padding: 10px 0;
+  padding: 0;
   border-bottom: 1px solid #f5f5f5;
 }
 .list-three:first-child {
