--- a/packages/repo-patient/src/views/style/modules.css
+++ b/packages/repo-patient/src/views/style/modules.css
@@ -155,7 +155,7 @@
 
 .none-page .icon {
   margin: 0 auto;
-  margin-top: -50px;
+  margin-top: 0;
   width: 160px;
   height: 100px;
   display: block;
