--- a/packages/repo-doctor/src/assets/css/element-fix.scss
+++ b/packages/repo-doctor/src/assets/css/element-fix.scss
@@ -54,3 +54,12 @@
     }
   }
 }
+//table fixed:right 高度不够覆盖内容
+.el-table__fixed-right {
+  height: calc(
+    100% - 1px
+  ) !important; //设置高优先，以覆盖内联样式 -1 不影响table自身的border
+  &::before {
+    height: 0;
+  }
+}
