--- a/packages/repo-patient/src/assets/css/index.scss
+++ b/packages/repo-patient/src/assets/css/index.scss
@@ -1,11 +1,14 @@
 // 变量
-@import './variable.scss';
+@import "./variable.scss";
 
 // 字体
-@import './iconfont.css';
+@import "./iconfont.css";
 
 // global
-@import './global.css';
+@import "./global.css";
 
 // common
-@import './common.scss';
+@import "./common.scss";
+
+//vant-style
+@import "./vant-style.css";
