--- a/packages/repo-patient/src/views/style/modules.css
+++ b/packages/repo-patient/src/views/style/modules.css
@@ -23,7 +23,9 @@
   border-radius: 2px;
   flex: 0 0 auto;
 }
-
+.card .card-avatar img {
+  height: 100%;
+}
 .card .card-body {
   flex: 1 0 1%;
   overflow: hidden;
@@ -128,7 +130,7 @@
   padding: 0;
   background-color: #f7f7f7;
   background-size: cover;
-  background-image: url("../../assets/images/icons/item-icon-none.jpg");
+  background-image: url('../../assets/images/icons/item-icon-none.jpg');
 }
 .imgs-item .item-icon img {
   width: 100%;
@@ -214,7 +216,7 @@ panel
 }
 
 .panel .panel-tit.tit-more::after {
-  content: "";
+  content: '';
   position: absolute;
   display: inline-block;
   top: 5px;
@@ -263,7 +265,7 @@ panel
 }
 
 .block-items .block-ico::before {
-  content: "";
+  content: '';
   position: absolute;
   width: 30px;
   height: 30px;
@@ -295,11 +297,11 @@ panel
 }
 
 .outline::before {
-  content: "";
+  content: '';
 }
 
 .outline::after {
-  content: "";
+  content: '';
 }
 
 .outline .outline-header {
@@ -327,7 +329,7 @@ panel
   position: relative;
 }
 .more.icon-next::before {
-  content: "";
+  content: '';
   position: absolute;
   display: inline-block;
   top: 4px;
@@ -338,7 +340,7 @@ panel
   background-repeat: no-repeat;
 }
 .outline .outline-header::before {
-  content: "";
+  content: '';
   display: inline-block;
   height: 80%;
   top: 15%;
