--- a/packages/repo-patient/src/views/style/modules.css
+++ b/packages/repo-patient/src/views/style/modules.css
@@ -165,6 +165,9 @@
 .none-page .icon.t10 {
   margin-top: 10%;
 }
+.none-page .icon.t20 {
+  margin-top: 20%;
+}
 .none-page .icon.icon_none {
   width: 200px;
   height: 175px;
