--- a/packages/repo-organization/src/assets/css/index.scss
+++ b/packages/repo-organization/src/assets/css/index.scss
@@ -1,11 +1,14 @@
-// variable
-@import './variable.scss';
-
 // iconfont
 @import './iconfont.scss';
 
 // global
 @import './reset.scss';
+
+// variable
+@import './variable.scss';
+
+// element - ui
+@import './element-fix.scss';
 
 // common
 @import './common.scss';
