--- a/packages/repo-operation/src/assets/css/element-fix.scss
+++ b/packages/repo-operation/src/assets/css/element-fix.scss
@@ -42,8 +42,13 @@ $--font-path: '~element-ui/lib/theme-chalk/fonts';
 }
 
 .el-form {
+  .el-form-item--mini .el-form-item__label {
+    padding: 0 10px 0 0;
+  }
+
   .el-form-item--mini.el-form-item {
     margin-bottom: 20px;
+    margin-right: 20px;
   }
 
   &.el-form--inline {
