--- a/packages/repo-doctor/src/views/clinic/inquiry/messageList/src/assets/style.scss
+++ b/packages/repo-doctor/src/views/clinic/inquiry/messageList/src/assets/style.scss
@@ -303,6 +303,7 @@
           }
 
           &.elps {
+            color: #333;
             text-overflow: ellipsis;
             white-space: nowrap;
             overflow: hidden;
