--- a/packages/repo-doctor/src/boot/boot_ui_element-theme/default/theme/element-fix.scss
+++ b/packages/repo-doctor/src/boot/boot_ui_element-theme/default/theme/element-fix.scss
@@ -48,17 +48,11 @@
       box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.13);
       border-radius: 3px;
     }
-
-    .el-form-item + .el-form-item {
-      margin-left: 20px;
-    }
   }
 }
 //table fixed:right 高度不够覆盖内容
 .el-table__fixed-right {
-  height: calc(
-    100% - 1px
-  ) !important; //设置高优先，以覆盖内联样式 -1 不影响table自身的border
+  height: calc(100% - 1px) !important; //设置高优先，以覆盖内联样式 -1 不影响table自身的border
   &::before {
     height: 0;
   }
