--- a/packages/repo-doctor/src/views/clinic/inquiry/messageList/src/assets/style.scss
+++ b/packages/repo-doctor/src/views/clinic/inquiry/messageList/src/assets/style.scss
@@ -1,20 +1,18 @@
 .chat-room-bg {
   .el-scrollbar__wrap,
   .el-dialog__body {
-    background-color: #f2f2f2;
+    background-color: #fff;
   }
 }
 .message-list-chat-room {
   height: 100%;
   display: flex;
   flex-direction: column;
-  background-color: #f2f2f2;
   .item {
     // overflow: auto;
     padding: 5px 10px;
     flex: 1;
     .body-size {
-      font-size: 16px;
     }
     .message {
       font-size: 14px;
@@ -25,7 +23,7 @@
 
         .message-body {
           color: rgba(51, 51, 51, 1);
-          background: rgba(255, 255, 255, 1);
+          background: #f2f2f2;
         }
 
         .message-avatar {
@@ -140,8 +138,8 @@
             margin: 0 5px;
           }
           img {
-            width: 24px;
-            height: 15px;
+            width: 16px;
+            height: 12px;
           }
         }
       }
