--- a/packages/repo-patient/src/views/style/modules.css
+++ b/packages/repo-patient/src/views/style/modules.css
@@ -334,14 +334,15 @@ panel
 .outline .outline-header::before {
   content: '';
   display: inline-block;
-  height: 80%;
-  top: 15%;
+  height: 15px;
+  top: 50%;
+  transform: translateY(-50%);
   width: 2px;
   border: 1px solid #00c6ae;
   border-top: none;
   border-bottom: none;
   background-color: #00c6ae;
-  border-radius: 5px;
+  border-radius: 2px;
   position: absolute;
   vertical-align: middle;
 }
