快递物流，购药订单详情区分云药房

--- a/packages/repo-patient/src/views/style/icon.css
+++ b/packages/repo-patient/src/views/style/icon.css
@@ -266,3 +266,8 @@
 /*content: '';*/
 /*background-image: url();*/
 /*}*/
+
+.ic_no_wuliu::before {
+  content: '';
+  background-image: url('../../assets/images/icons/ic_no wuliu.png');
+}
