--- a/packages/repo-website/src/views/mamba/src/assets/css/style.css
+++ b/packages/repo-website/src/views/mamba/src/assets/css/style.css
@@ -1504,11 +1504,13 @@ section {
   color: #9eccf4;
 }
 
-button {
-  outline: none;
-}
 button:focus,
-input::-moz-focus-inner,
-button::-moz-focus-inner {
-  outline: 0;
+button:active:focus,
+button.active:focus,
+button.focus,
+button:active.focus,
+button.active.focus {
+  outline: none;
+  border-color: transparent;
+  box-shadow: none;
 }
