--- a/packages/repo-operation/src/assets/css/ui-fix.scss
+++ b/packages/repo-operation/src/assets/css/ui-fix.scss
@@ -1,25 +1,25 @@
 .el-table--mini {
-  font-size: 14px !important;
+  font-size: 14px;
 }
 
 .el-button--mini,
 .el-button--mini.is-round {
-  padding: 6px 16px !important;
+  padding: 7px 16px;
 }
 
 .el-table th {
-  background: #f5f5f5 !important;
-  color: #000 !important;
+  background: #f5f5f5;
+  color: #000;
 
   > .cell {
-    padding: 6px 12px !important;
+    padding: 6px 12px;
   }
 }
 
 .el-table tr td {
-  padding: 14px 0 !important;
+  padding: 14px 0;
 }
 
 .el-input--suffix .el-input__inner {
-  padding-right: 15px !important;
+  padding-right: 15px;
 }
