--- a/packages/repo-organization/src/assets/css/ui-fix.scss
+++ b/packages/repo-organization/src/assets/css/ui-fix.scss
@@ -23,3 +23,17 @@
 .el-input--suffix .el-input__inner {
   padding-right: 15px !important;
 }
+.el-dialog {
+  border-radius: 6px !important;
+}
+.el-dialog__header {
+  padding: 8px 20px 8px 20px !important;
+  background: #f5f5f5 !important;
+  border-radius: 6px 6px 0 0 !important;
+}
+.el-dialog__headerbtn .el-dialog__close {
+  font-size: 25px !important;
+}
+.el-dialog__headerbtn {
+  top: 8px !important;
+}
