--- a/packages/repo-operation/src/assets/css/ui-fix.scss
+++ b/packages/repo-operation/src/assets/css/ui-fix.scss
@@ -1,25 +1,61 @@
-.el-table--mini {
-  font-size: 14px;
-}
+/*
+ * Element - UI  Fix
+ *
+ */
 
-.el-button--mini,
-.el-button--mini.is-round {
-  padding: 7px 16px;
-}
+/* Element - variable 
+ ------------------------- */
+$--form-width-default: 195px;
 
-.el-table th {
-  background: #f5f5f5;
-  color: #000;
+/* Element - Form
+-------------------------- */
+.el-form {
+  &.el-form--inline {
+    .el-form-item {
+      margin-right: 24px;
+      margin-bottom: 16px;
+    }
 
-  > .cell {
-    padding: 6px 12px;
+    .el-input__inner {
+      width: $--form-width-default;
+    }
+  }
+
+  .el-form-item {
+    margin-bottom: 16px;
+  }
+
+  .el-date-editor .el-range__close-icon {
+    position: relative;
+    right: -5px;
+  }
+  .el-date-editor .el-range-separator {
+    display: inline-flex;
+    justify-content: center;
+  }
+  .el-date-editor.el-input,
+  .el-date-editor.el-input__inner {
+    width: $--form-width-default;
   }
 }
 
-.el-table tr td {
-  padding: 14px 0;
-}
+/* Element - Table
+-------------------------- */
+.el-table {
+  &.el-table--mini {
+    font-size: 14px;
+  }
 
-.el-input--suffix .el-input__inner {
-  padding-right: 15px;
+  th {
+    background: #f5f5f5;
+    color: #000;
+
+    > .cell {
+      padding: 6px 12px;
+    }
+  }
+
+  tr td {
+    padding: 12px 0;
+  }
 }
