--- a/packages/repo-operation/src/assets/css/Fix.Element-UI.scss
+++ b/packages/repo-operation/src/assets/css/Fix.Element-UI.scss
@@ -47,11 +47,12 @@ $--form-width-default: 195px;
   }
 
   th {
+    font-weight: bold;
     background: #f5f5f5;
     color: #000;
 
     > .cell {
-      padding: 4px 12px;
+      padding: 8px 12px;
     }
   }
 
