--- a/packages/repo-organization/src/assets/css/Fix.Element-UI.scss
+++ b/packages/repo-organization/src/assets/css/Fix.Element-UI.scss
@@ -8,61 +8,65 @@
 $--form-width-default: 195px;
 
 /* Element - Form
- -------------------------- */
+  -------------------------- */
 .el-form {
-  &.el-form--inline {
+  &:not(.element-ui-default) {
+    &.el-form--inline {
+      .el-form-item {
+        margin-right: 24px;
+        margin-bottom: 16px;
+      }
+
+      .el-input__inner {
+        width: $--form-width-default;
+      }
+    }
+
     .el-form-item {
-      margin-right: 24px;
       margin-bottom: 16px;
     }
 
-    .el-input__inner {
+    .el-date-editor .el-range__close-icon {
+      position: relative;
+      right: -5px;
+    }
+    .el-date-editor .el-range-separator {
+      display: inline-flex;
+      justify-content: center;
+    }
+    .el-date-editor.el-input,
+    .el-date-editor.el-input__inner {
       width: $--form-width-default;
     }
-  }
-
-  .el-form-item {
-    margin-bottom: 16px;
-  }
-
-  .el-date-editor .el-range__close-icon {
-    position: relative;
-    right: -5px;
-  }
-  .el-date-editor .el-range-separator {
-    display: inline-flex;
-    justify-content: center;
-  }
-  .el-date-editor.el-input,
-  .el-date-editor.el-input__inner {
-    width: $--form-width-default;
   }
 }
 
 /* Element - Table
- -------------------------- */
+  -------------------------- */
 .el-table {
-  &.el-table--mini {
-    font-size: 14px;
-  }
-
-  th {
-    font-weight: bold;
-    background: #f5f5f5;
-    color: #000;
-
-    > .cell {
-      padding: 8px 12px;
+  &:not(.element-ui-default) {
+    &.el-table--mini {
+      font-size: 14px;
     }
-  }
 
-  tr td {
-    padding: 16px 0;
-  }
+    th {
+      font-weight: bold;
+      background: #f5f5f5;
+      color: #000;
 
-  .el-button--mini,
-  .el-button--mini.is-round {
-    font-size: 14px;
-    padding: 4px 0px;
+      > .cell {
+        padding: 8px 12px;
+      }
+    }
+
+    tr td {
+      padding: 16px 0;
+    }
+
+    .el-button--mini,
+    .el-button--mini.is-round {
+      font-size: 14px;
+      padding: 4px 0px;
+    }
   }
 }
