--- a/packages/repo-operation/src/assets/css/Fix.Element-UI.scss
+++ b/packages/repo-operation/src/assets/css/Fix.Element-UI.scss
@@ -42,11 +42,10 @@ $--form-width-default: 195px;
           width: $--form-width-default;
         }
       }
-    }
 
-    .el-form-item {
-      margin-right: 20px;
-      margin-bottom: 20px;
+      .el-button {
+        min-width: 80px;
+      }
     }
   }
 }
