--- a/packages/repo-organization/src/assets/css/Fix.UI.scss
+++ b/packages/repo-organization/src/assets/css/Fix.UI.scss
@@ -24,3 +24,15 @@
     width: #{$i}em !important;
   }
 }
+.layout-route {
+  padding: 20px;
+
+  .card {
+    background: #fff;
+    padding: 24px 32px;
+
+    &.card-search {
+      padding: 24px 32px 4px 32px;
+    }
+  }
+}
