--- a/packages/repo-doctor/src/assets/css/index.scss
+++ b/packages/repo-doctor/src/assets/css/index.scss
@@ -7,6 +7,7 @@
 // UI
 @import './element-theme.scss';
 @import './element-fix.scss';
+@import './Fix.Quasar.scss';
 
 // 重置
 @import './normalize.css';
