--- a/packages/repo-doctor/src/views/components/inquiry/messageList/src/assets/style.scss
+++ b/packages/repo-doctor/src/views/components/inquiry/messageList/src/assets/style.scss
@@ -106,6 +106,7 @@
       }
 
       .message-body {
+        // cursor: pointer;
         white-space: pre-wrap;
         word-wrap: break-word;
         display: inline-block;
